--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@ html, body {
   </p>
 
   <!-- Script dependencies -->
-  <script src="lib/webgl-utils.js"></script>
-  <script src="lib/webgl-debug.js"></script>
-  <script src="lib/cuon-utils.js"></script>
-  <script src="lib/cuon-matrix-cse160.js"></script>
+  <script src="webgl-utils.js"></script>
+  <script src="webgl-debug.js"></script>
+  <script src="cuon-utils.js"></script>
+  <script src="cuon-matrix-cse160.js"></script>
   <script src="Cube.js"></script>
   <script src="camera.js"></script>
-  <script src="asg3.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
