--- a/index.html
+++ b/index.html
@@ -77,6 +77,17 @@ html, body {
 
   <button id="addBlockBtn">Add Block</button>
   <button id="removeBlockBtn">Remove Block</button>
+  <p>
+    Select Block Type:
+    <select id="blockTypeSelect">
+      <option value="0">Dirt</option>
+      <option value="4">Wood</option>
+      <option value="3">Stone</option>
+      <option value="7">Diamond</option>
+      <option value="6">Gold</option>
+      <option value="5">Iron</option>
+    </select>
+  </p>
 
   <p>
     You can click and drag, or use the keys below to explore and navigate through map:
